--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,7 +5,7 @@ dependencies:
 
 galaxy_info:
   author: Vinod Panicker
-  description: PHP XHProf for openapphack
+  description: PHP XHProf for OAH
   company: ""
   license: "license (BSD, MIT)"
   min_ansible_version: 2.0
