--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,33 +1,17 @@
 ---
-- name: Include OS-specific variables.
-  include_vars: "{{ ansible_os_family }}.yml"
+- include: tasks/oah-install.yml
+  when: oah_command == "install"
 
-# Setup/install tasks.
-- include: setup-Debian.yml
-  when: ansible_os_family == 'Debian'
+- include: tasks/oah-update.yml
+  when: oah_command == "update"
 
-# Install and configure XHProf.
-- name: Install XHProf using PECL.
-  command: "pecl install {{ item }}"
-  register: pecl_result
-  changed_when: "pecl_result.rc == 0"
-  failed_when: "not (('already installed' in pecl_result.stdout) or ('install ok:' in pecl_result.stdout))"
-  with_items:
-    # Manual channel installation required for certain PEAR versions.
-    - "channel://pecl.php.net/xhprof-0.9.4"
-    - xhprof
+- include: tasks/oah-remove.yml
+  when: oah_command == "remove"
 
-- name: Copy XHProf INI into php.d folder.
-  template:
-    src: xhprof.ini.j2
-    dest: "{{ php_extension_conf_path }}/xhprof.ini"
-    owner: root
-    group: root
-    mode: 0644
-  notify: restart webserver
+- include: tasks/oah-reset.yml
+  when: oah_command == "reset"
 
-- name: Ensure XHProf output directory exists.
-  file:
-    path: "{{ xhprof_output_dir }}"
-    state: directory
-    mode: 0777
+- include: tasks/oah-validate.yml
+  when: oah_command == "validate"
+
+#- include: tasks/oah-{{ oah_command }}.yml
