--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -1,2 +1,3 @@
 ---
-php_xdebug_module_path: /usr/lib/php5/modules
+__php_xhprof_module_path: /usr/lib/php5/modules
+__php_xhprof_config_filename: 20-xhprof.ini
